Use BufferedReader w/ 64k buffer for regex input
- for FileRunner.main() with regex output enabled use a BufferedReader
  with a 64k buffer and readLine() to decode and input text to matcher
  line by line (previously the entire input file was read into the a
  single humungous heap buffer)
- this makes test-gc regex vs ribose runs with output enabled more even
  with regard to heap usage so that gc outputs are directly comparable
- include regex vs Tintervals and Sintervals transducers in test-gc
- also catch and report AssertionError in all main() methods

Signed-off-by: jrte <jrte.project@gmail.com>